--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="text_margin">20dp</dimen>
     <dimen name="text_padding">10dp</dimen>
     <dimen name="button_text_size">20sp</dimen>
+    <dimen name="larger_spacing">32dp</dimen>
 </resources>
