--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -36,16 +36,34 @@
 
         <TextView
             android:id="@+id/auth_button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
+            android:layout_margin="@dimen/larger_spacing"
             android:background="@color/colorAccent"
             android:padding="@dimen/text_padding"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:gravity="center_horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/settings_button"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/login_button_text"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/settings_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/larger_spacing"
+            android:background="@color/colorAccent"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:text="@string/settings_btn"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/auth_button"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
         <TextView
